<resources>
    <string name="app_name">FirstHomeWork</string>
    <string name="dialog_first">- Оби Ван не сказал, что случилось с твои отцом?</string>
    <string name="dialog_second">Введите пожалуйста: -Он сказал, ты убил его.</string>
    <string name="btn_first">Нажать</string>
    <string name="answer_text">Нет, я твой отец</string>
    <string name="answer_luk">Выберите правильный вариант:</string>
    <string name="switch_text">Люк  молчит… Нажмите, чтобы продолжить диалог</string>
    <string name="switch_on">ВКЛ</string>
    <string name="switch_off">ВЫКЛ</string>
    <string name="second_activity_start">Для записи в отряд штурмовиков необходимо заполнить анкету</string>
    <string name="second_act_name_input"> Введите свое имя</string>
    <string name="second_act_surname_input"> Введите свою фамилию и отчество </string>
    <string name="second_act_phone">тел.:</string>
    <string name="second_act_email">email</string>
    <string name="btn_nxt_lvl">далее</string>
    <string name="second_act_password">Придумайте пароль для входа в личный кабинет</string>
    <string name="hint_name">Введите имя</string>
    <string name="hint_surname">Введите фамилию</string>
    <string name="hint_phone">тел.:</string>
    <string name="hint_email">email</string>
    <string name="calc_text_AC">CLEAR</string>
    <string name="calc_text_Delete">Del</string>
    <string name="calc_btn_one">1</string>
    <string name="calc_btn_two">2</string>
    <string name="calc_btn_three">3</string>
    <string name="calc_btn_four">4</string>
    <string name="calc_btn_five">5</string>
    <string name="calc_btn_six">6</string>
    <string name="calc_btn_seven">7</string>
    <string name="calc_btn_eight">8</string>
    <string name="calc_btn_nine">9</string>
    <string name="calc_btn_zero">0</string>
    <string name="calc_btn_division">÷</string>
    <string name="calc_btn_multiply">*</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_subtract">-</string>
    <string name="calc_btn_answ">=</string>
    <string name="calc_btn_dot">.</string>









</resources>